# lodestone_api_client

./: Cargo.toml  README.md
src/: builder.rs  error.rs  lib.rs  models.rs  prelude.rs  routes.rs
src/routes/: character.rs  free_company.rs  search.rs
src/routes/search/: character.rs  free_company.rs
src/util/: serde.rs
