[package]
name = "lodestone_api_client"
version = "0.1.0"
authors = ["Kyle Clemens <git@kyleclemens.com>"]
edition = "2018"

[dependencies]
failure = "0.1"
log = "0.4"
reqwest = "0.9"
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_urlencoded = "0.5"
url = "1"
url_serde = "0.2"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.ffxiv_types]
version = "1"
default-features = false
features = ["worlds", "with_serde"]

[dependencies.lodestone_parser]
git = "https://github.com/jkcclemens/lodestone_parser"
default-features = false
features = ["with_serde"]
